# nilang

./: Cargo.nix  Cargo.toml  README.md  flake.nix  language.ebnf  test  test.asm  test.ni
errors/: Cargo.toml
errors/src/: generator_errors.rs  lexer_errors.rs  lib.rs  parser_errors.rs  transformer_errors.rs
generator/: Cargo.toml
generator/src/: assembly_flavour.rs  calling_convention.rs  flavour.rs  generator.rs  lib.rs  memory_manager.rs  registers.rs  to_assembly.rs  utils.rs
generator/src/flavours/: gnu_64.rs  gnu_flavour.rs  mod.rs  x86_registers.rs
generator/src/generators/: mod.rs
generator/src/transformers/: function.rs  function_call.rs  function_declaration.rs  mod.rs  operator.rs  return.rs  scope.rs  variable_declaration.rs
lexer/: Cargo.toml
lexer/src/: aggregated_iterator.rs  lib.rs  tokenizer.rs  tokens.rs
lexer/src/tests/: convert_keywords.rs  convert_literals.rs  convert_numbers.rs  convert_operations.rs  convert_operators.rs  convert_parantheses.rs  convert_whitespaces.rs  identifier.rs  keyword.rs  lex_identifier.rs  lex_keywords.rs  lex_literals.rs  lex_numbers.rs  lex_operations.rs  lex_operators.rs  lex_special_characters.rs  lex_whitespaces.rs  literal.rs  mod.rs  operation.rs  operator.rs  (+2 more)
parser/: Cargo.toml
parser/src/: assuming_iterator.rs  lib.rs  multi_peekable.rs  nodes.rs  token.rs
runner/: Cargo.toml
runner/src/: main.rs
transformer/: Cargo.toml
transformer/src/: functions_ref.rs  labels.rs  lib.rs  structures_ref.rs  temporaries.rs
types/: Cargo.toml
types/src/: instructions.rs  lib.rs  nodes.rs  tokens.rs
(+56 files in other folders)
