[package]
name = "nilang-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { version = "0.1.0", path = "../errors" }
nilang-types = { version = "0.1.0", path = "../types" }

eyre = "0.6.12"
