[package]
name = "nilang-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { version = "0.1.0", path = "../errors" }
nilang-lexer = { version = "0.1.0", path = "../lexer" }
nilang-parser = { version = "0.1.0", path = "../parser" }
nilang-transformer = { version = "0.1.0", path = "../transformer" }
nilang-generator = { version = "0.1.0", path = "../generator" }

eyre = "0.6.12"
colored = "2.1.0"
nilang-types = { version = "0.1.0", path = "../types" }
